Added the Soul Scroll, a custom player attachment, and the Soul Meter. Magically exciting stuff... ;3

--- a/src/main/resources/assets/wingcrafter/lang/en_us.json
+++ b/src/main/resources/assets/wingcrafter/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "itemGroup.wingcrafter.wingcrafter": "Wingcrafter",
-  "block.wingcrafter.scroll": "Scroll"
+  "block.wingcrafter.scroll": "Scroll",
+  "item.wingcrafter.soul_scroll": "Soul Scroll"
 }
