Create Frost Willow Blocks + Change Soul to use Cardinal Component + Mixin Testing :3

--- a/src/main/resources/assets/wingcrafter/lang/en_us.json
+++ b/src/main/resources/assets/wingcrafter/lang/en_us.json
@@ -12,6 +12,8 @@
       "item.wingcrafter.quill.tooltip.2": "To use, hold an empty scroll in your offhand and",
       "item.wingcrafter.quill.tooltip.3": "interact with a scroll placed in the world.",
   "block.wingcrafter.dragonflame_cactus_block": "Dragonflame Cactus Stem",
+  "block.wingcrafter.frost_willow_log": "Frost Willow Log",
+  "block.wingcrafter.frost_willow_leaves": "Frost Willow Leaves",
 
   "glass.wingcrafter.clear": "Clear Pane",
   "glass.wingcrafter.white": "White Pane",
